src/objects/MC4SF__MC_Query__c.object
<CustomObject>
    <fields>
        <fullName>MC4SF__Campaign_Id__c</fullName>
        <label>Campaign Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Campaign_Members_SOQL__c</fullName>
        <label>Campaign Members SOQL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MC4SF__Campaign_Members__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Campaign Members</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MC4SF__Contacts_SOQL__c</fullName>
        <label>Contacts SOQL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MC4SF__Contacts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MC4SF__Error_Message__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Interests__c</fullName>
        <label>Interests</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MC4SF__Last_Run_As__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Run As</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MC_Queries1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MC4SF__Last_Run__c</fullName>
        <label>Last Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MC4SF__Leads_SOQL__c</fullName>
        <label>Leads SOQL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MC4SF__Leads__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Leads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MC4SF__MC_List__c</fullName>
        <label>MC Audience</label>
        <referenceTo>MC4SF__MC_List__c</referenceTo>
        <relationshipLabel>MC Queries</relationshipLabel>
        <relationshipName>MC_Queries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MC4SF__Run_Daily_At__c</fullName>
        <label>Run Daily At</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00 AM</fullName>
                </value>
                <value>
                    <fullName>1:00 AM</fullName>
                </value>
                <value>
                    <fullName>2:00 AM</fullName>
                </value>
                <value>
                    <fullName>3:00 AM</fullName>
                </value>
                <value>
                    <fullName>4:00 AM</fullName>
                </value>
                <value>
                    <fullName>5:00 AM</fullName>
                </value>
                <value>
                    <fullName>6:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>3:00 PM</fullName>
                </value>
                <value>
                    <fullName>4:00 PM</fullName>
                </value>
                <value>
                    <fullName>5:00 PM</fullName>
                </value>
                <value>
                    <fullName>6:00 PM</fullName>
                </value>
                <value>
                    <fullName>7:00 PM</fullName>
                </value>
                <value>
                    <fullName>8:00 PM</fullName>
                </value>
                <value>
                    <fullName>9:00 PM</fullName>
                </value>
                <value>
                    <fullName>10:00 PM</fullName>
                </value>
                <value>
                    <fullName>11:00 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MC4SF__Static_Segments__c</fullName>
        <label>Static Segments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MC4SF__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Filters Defined</fullName>
                </value>
                <value>
                    <fullName>Previewed</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MC4SF__Subscribers_Added_last_run__c</fullName>
        <label>Subscribers Added(last run)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MC4SF__User_Contacts_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Contacts Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MC4SF__User_Leads_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Leads Only</label>
        <type>Checkbox</type>
    </fields>
    <label>MC Query</label>
    <nameField>
        <label>MC Query Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MC Queries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>